# Virtuosa

./: .gitmodules  CMakeLists.txt  README.md  main.cpp  text.txt
include/: globals.h  myCamera.hpp  myShader.hpp  viCamera.hpp  viData.hpp  viGui.hpp  viShader.hpp  viUI.hpp  viWidget.hpp
shader/: fragment.fs  pointPicker.comp  transformCloud.comp  ver.vs
src/: myCamera.cpp  myShader.cpp  viCamera.cpp  viData.cpp  viGui.cpp  viShader.cpp  viUI.cpp  viWidget.cpp
submodules/glad/include/glad/: glad.h
submodules/glad/src/: glad.c
texture/: clear_cloud.pcd  cloud.pcd  cloud2.pcd
